--- a/css/display.css
+++ b/css/display.css
@@ -48,7 +48,7 @@ th, td {
     text-align: left;
 }
 th {
-    background: #7b1fa2;
+    background: #149b26;
     color: white;
 }
 tr:nth-child(even) {
@@ -60,7 +60,7 @@ img {
 }
 button {
     padding: 10px 20px;
-    background: #8e24aa;
+    background: #29b83a;
     color: white;
     border: none;
     border-radius: 8px;
@@ -68,7 +68,7 @@ button {
     margin-bottom: 20px;
 }
 button:hover {
-    background: #6a1b9a;
+    background: #27b229;
 }
 /* สีสถานะ */
 .status-paid {
